# srg-elvis-public

./: LICENSE  LICENSE.TXT  README.md  ciTest.rs  router_planning.txt
sim/: .gitignore  Cargo.toml  perf.data  perf.data.old  router_planning.txt
sim/.cargo/: config.toml
sim/.github/workflows/: ci.yml
sim/benches/: internet.rs
sim/benchmarking/: .gitignore  benchmarking.py  generate_graphs.py  readme.md  requirements.txt  run_benchmark.sh
sim/benchmarking/raw_data/: basic-10.json  basic-100.json  basic-1000.json  basic-10000.json  basic-100000.json  basic-20.json  basic-25000.json  basic-250000.json  basic-30.json  basic-40.json  basic-4700.json  basic-4800.json  basic-4900.json  basic-50.json  basic-5000.json  basic-50000.json  basic-500000.json  basic-5100.json  basic-5200.json  basic-5300.json  basic-5400.json  basic-60.json  basic-70.json  basic-80.json  basic-90.json  core_data.json  hundred_to_million.json  one_to_seventy_thousand.json  thousand_to_ten_thousand.json
sim/benchmarking/sims/: base-basic.ndl  base-high-bandwidth.ndl  basic-10.ndl  basic-100.ndl  basic-1000.ndl  basic-10000.ndl  basic-100000.ndl  basic-25000.ndl  basic-250000.ndl  basic-5000.ndl  basic-50000.ndl  basic-500000.ndl  basic-5500.ndl
sim/elvis/: Cargo.toml  cli.yml  criterion.toml
sim/elvis-core/: Cargo.toml
sim/elvis-core/benches/: internet.rs
sim/elvis-core/src/: cli.rs  control.rs  gcd.rs  id.rs  internet.rs  ip_table.rs  lib.rs  logging.rs  machine.rs  main.rs  message.rs  network.rs  network_api.rs  networks.rs  participants.rs  protocol.rs  protocols.rs  queues.rs  rib.rs  session.rs  shutdown.rs  transport.rs
sim/elvis-core/src/control/: primitive.rs  value.rs
sim/elvis-core/src/core/: message.rs
sim/elvis-core/src/logs/: .logs
sim/elvis-core/src/message/: chunk.rs  message_bytes.rs  slice_range.rs
sim/elvis-core/src/network/: tap.rs
sim/elvis-core/src/networks/: broadcast.rs  direct.rs  generic.rs  latent.rs  reliable.rs  unreliable.rs
sim/elvis-core/src/protocol/: context.rs
sim/elvis-core/src/protocols/: arp.rs  dhcp.rs  dhcp_parsing.rs  dns.rs  ipv4.rs  pci.rs  rib.rs  socket_api.rs  sockets.rs  subscribable_pci.rs  subwrap.rs  tap.rs  tcp.rs  tcp_listener.rs  tcp_stream.rs  udp.rs  user_process.rs  utility.rs
sim/elvis-core/tests/: internet.rs  message.rs  telephone_single.rs
sim/elvis/__benches/: scaled_sim_benchmark.rs
sim/elvis/__benches/ndl_benchmarks/: ten_machines.txt  thousand_machines.txt
sim/elvis/__tests/: generator_machine_tests.rs  generator_valid_tests.rs
sim/elvis/__tests/parsing_tests/: basic_correct_1.txt  machine_fail_no_applications.txt  network_fail_invalid_type.txt  options_fail_duplicate_argument.txt
sim/elvis/benches/: basic.rs  benchmarks.rs  scaled_sim_benchmark.rs
sim/elvis/benches/ndl_benchmarks/: fifty_thousand_machines.txt  hundred_machines.txt  hundred_thousand_machines.txt  ten_thousand_machines.txt  thousand_machines.txt
sim/elvis/examples/: basic.rs  latent.rs  parse.rs  ping_pong.rs  print_machine_id.rs  socket_basic.rs  telephone_multi.rs  telephone_single.rs  unreliable.rs
sim/elvis/src/: applications.rs  cli.rs  ip_generator.rs  lib.rs  main.rs  ndl.rs  networks.rs  parsing.rs  simulation.rs  simulations.rs  visualization.rs
sim/elvis/src/applications/: arp_router.rs  barebones_client.rs  barebones_server.rs  basic_client.rs  basic_server.rs  capture.rs  dhcp.rs  dhcp_client.rs  dhcp_server.rs  dns.rs  dns_client.rs  dns_server.rs  dns_test_client.rs  dns_test_server.rs  forward.rs  mul3.rs  multi_capture.rs  on_receive.rs  ping_pong.rs  ping_pong_multi.rs  pingpong.rs  print_machine_id.rs  printer.rs  query.rs  query_tester.rs  rip.rs  router.rs  send_message.rs  simple_web_client.rs  socket_client.rs  socket_ping_client.rs  socket_pong_server.rs  socket_recv.rs  socket_send.rs  socket_server.rs  streaming_client.rs  streaming_server.rs  tcp_listener_server.rs  tcp_stream_client.rs  terminal.rs  (+5 more)
sim/elvis/src/dns/: dns_client.rs  dns_server.rs
sim/elvis/src/ndl/: arpsinglecapture.ndl  basic.ndl  dhcp.ndl  forward.txt  ndl.rs  pingpongarp.ndl  pingpongrip.ndl  riprouter.ndl  riproutermulti.ndl  riproutersinglecapture.ndl  sim_creator.rs  testing.ndl  testing.txt  tests.rs
sim/elvis/src/networks/: latent.rs  unreliable.rs
sim/elvis/src/parsing/: core_parser.rs  depreciated_parser.rs  generator.rs  (+7 more)
sim/elvis/tests/: generator_machine_tests.rs  generator_network_tests.rs  generator_tests.rs  generator_util_tests.rs  generator_valid_tests.rs  internet.rs  latent.rs  message.rs  parsing.rs  parsing_machine_tests.rs  parsing_networks_tests.rs  parsing_options_tests.rs  parsing_valid_tests.rs  simulations.rs  telephone_multi.rs  telephone_single.rs  unreliable.rs
sim/src/: applications.rs  core.rs  lib.rs  main.rs  networks.rs  protocols.rs  simulation.rs
sim/src/applications/: capture.rs  forward.rs  mod.rs  send_message.rs  unreliable_tester.rs
sim/src/core/: buf.rs  control.rs  internet.rs  machine.rs  message.rs  mod.rs  network.rs  protocol.rs  protocol_context.rs  protocol_id.rs  session.rs  shared_session.rs
sim/src/networks/: latent.rs  reliable.rs  unreliable.rs
sim/src/protocols/: capture.rs  ip.rs  ipv4.rs  mod.rs  nic.rs  tap.rs  udp.rs  user_process.rs
sim/src/simulation/: mod.rs
sim/src/utils/: mod.rs
sim/tests/: control.rs  internet.rs  ipv4.rs  latent.rs  machine.rs  message.rs  nic_and_capture.rs  tap_and_capture.rs  telephone.rs  telephone_multi.rs  telephone_single.rs  unreliable.rs
tools/scraper/: Cargo.toml  README.md
tools/scraper/data analysis/: analyzer.py
tools/scraper/data_analysis/: analyzer.py  dataframe.csv  image_size_weights.csv  img_dataframe.csv  img_sizes.txt  num_images.csv  page_size.csv  test.txt
tools/scraper/src/: analyzer.py  main.rs
tools/user_behavior/: Cargo.toml
tools/user_behavior/src/: main.rs
(+328 files in other folders)
