[package]
name = "elvis"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
const-fnv1a-hash = "1.0"
tokio = { version = "1.20", features = ["rt", "rt-multi-thread", "time", "macros", "signal"] }

[dev-dependencies]
criterion = { version = "0.3", features = ["async_tokio"] }
anyhow = "1.0"
etherparse = "0.10"

[[bench]]
name = "internet"
harness = false