[package]
name = "elvis-core"
version = "0.2.0"
edition = "2021"

[dependencies]
thiserror = "1.0.37"
tokio = { version = "1.23.0", features = ["rt", "rt-multi-thread", "time", "macros", "signal", "sync"] }
dashmap = "5.4.0"
tracing = "0.1.37"
futures = "0.3.25"
rand = { version = "0.8.5", features = ["small_rng"] }
rustc-hash = "1.1.0"
async-trait = "0.1.68"
tokio-util = { version = "0.7.8", features = ["time"] }

[features]
compute_checksum = []

[dev-dependencies]
anyhow = "1.0"
etherparse = "0.10"
