[package]
name = "elvis"
version = "0.2.0"
edition = "2021"

[dependencies]
elvis-core = { path = "../elvis-core" }
rand = { version = "0.8.5", features = ["small_rng"] }
thiserror = "1.0.37"
chrono = "0.4"
clap = { version = "4.0.18", features = ["derive"] }
itertools = "0.8"
rustc-hash = "1.1.0"
nom = "7"

[dev-dependencies]
criterion = { version = "0.4.0", features = [ "html_reports" ] }
anyhow = "1.0.66"
ntest = "0.9"

# [[bench]]
# name = "scaled_sim_benchmark"
# harness = false
# [[bench]]
# name = "benchmarks"
# harness = false