[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.12.0"
select = "0.5.0"
url = "2.2.2"
serde = {version = "1.0.144", features = ["derive", "rc"]}
serde_json = "1.0.85"
clap = "3.1.6"
