[package]
name = "user_behavior"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


rand = "0.8"
rand_distr = "0.4.3"

timer = "0.2.0"
chrono = "0.4"
select = "0.5.0"
url = "2.2.2"
reqwest = {version = "0.11", features = ["blocking"]}