[package]
name = "user_behavior"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


rand = "0.8"
rand_distr = "0.4.3"
clap = { version = "3.1.6", features = ["derive"] }
timer = "0.2.0"
serde = {version = "1.0.144", features = ["derive", "rc"]}
chrono = "0.4"
select = "0.6.0"
url = "2.2.2"
